<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_HydroSimulatorInitData" Id="{6bae0cf3-c91c-4f2b-9b95-8f8585b668cd}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '4'}
TYPE ST_HydroSimulatorInitData :
STRUCT
	Header: TComInitDataHdr;
	CallByHdr: TComInitDataElmHdr;
	CallBy: TctModuleCallByType;
	ExecutionSequenceHdr: TComInitDataElmHdr;
	ExecutionSequence: TctModuleExecutionSequenceType;
	StepSizeHdr: TComInitDataElmHdr;
	StepSize: TctStepSizeType;
	ExecuteModelCodeHdr: TComInitDataElmHdr;
	ExecuteModelCode: BOOL;
	ModelParametersHdr: TComInitDataElmHdr;
	ModelParameters: P_HydroSimulator_T;
	ContextInfoArr_0_TaskOidHdr: TComInitDataElmHdr;
	ContextInfoArr_0_TaskOid: OTCID;
	ContextInfoArr_0_TaskPriorityHdr: TComInitDataElmHdr;
	ContextInfoArr_0_TaskPriority: UDINT;
	ContextInfoArr_0_TaskCycleTimeNsHdr: TComInitDataElmHdr;
	ContextInfoArr_0_TaskCycleTimeNs: UDINT;
	ContextInfoArr_0_TaskPortHdr: TComInitDataElmHdr;
	ContextInfoArr_0_TaskPort: UINT;
	ContextInfoArr_0_TaskSortOrderHdr: TComInitDataElmHdr;
	ContextInfoArr_0_TaskSortOrder: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>